# CpFM4

./: CMakeLists.txt  README.md  bla.C  bla.cxx  main.cc  run.mac  setup.bash  test.cxx  vis.mac
abs_sizes/bad_bar/: h1_b_sizes.root  h2_b_sizes.root  h3_b_sizes.root  h4_b_sizes.root  h5_b_sizes.root  h6_b_sizes.root  h7_b_sizes.root  h8_b_sizes.root
abs_sizes/good_bar/: h1_g_sizes.root  h2_g_sizes.root  h3_g_sizes.root  h4_g_sizes.root  h5_g_sizes.root  h6_g_sizes.root  h7_g_sizes.root  h8_g_sizes.root
ana/: Makefile  extract_1.cc  extract_2.cc
include/: DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  EventDataStructure.hh  HitDataStructure.hh  HitMy.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  StackingAction.hh  SteppingAction.hh  SteppingMessenger.hh  SteppingVerbose.hh  TrackInformation.hh  TrackingAction.hh  UA9Const.hh  VolumeStructures.hh
src/: DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  HitMy.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  StackingAction.cc  SteppingAction.cc  SteppingMessenger.cc  SteppingVerbose.cc  TrackInformation.cc  TrackingAction.cc
